# dcm-tools

./: .gitignore  Cargo.toml  TCP-SSL 通讯应用到DICOM上面.md  t1.dcm
dicom_codegen/: Cargo.toml
dicom_codegen/src/: lib.rs
src/: dcm_meta.rs  dcmobj.rs  dicom_info.rs  image_info.rs  main.rs  patient_info.rs  series_info.rs  study_info.rs
test_data/: 1.2.840.113713.55902.1.642704.2248.1270609320.4549.dcm
