[package]
name = "dcm-tools"
version = "0.1.0"
edition = "2024"
[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dicom = "0.8.1"
dicom-object= "0.8.1"
dicom-core= "0.8.1"
dicom-transfer-syntax-registry = "0.8.1"
tempfile = "3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dicom-gen-uid = "0.1.0"
#dicom-ul = "0.8.1"